--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,16 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirates</h1>
+
+<div class="pirate">
+    <h2>Name: <%= @pirate.name %></h2><br>
+    <h3>Weight: <%= @pirate.weight %> pounds</h2><br>
+    <h3>Height: <%= @pirate.height %> inches</h2><br>
+ </div><br>
 
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h1>Ships</h1>
+    <% @ships.each do |ship| %>
+    <div class="ship">
+    <h2>Name: <%= ship.name %></h2><br>
+    <h3>Type: <%= ship.type %> </h2><br>
+    <h3>Booty: <%= ship.booty %> </h2><br>
+    </div>
